--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "- Heverton Reis\r - Luma Lisley\r - Nathalie Santos\r - Philipe Santos \r - Rodrigo Silvestre",
   "main": "index.js",
   "scripts": {
-    "start": "npx cypress open",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "scripts": "cypress run",
+    "test": "npm run scripts"
   },
   "repository": {
     "type": "git",
@@ -20,7 +20,9 @@
   "devDependencies": {
     "cypress": "^6.2.1",
     "cypress-cucumber-preprocessor": "^4.0.0",
-    "cypress-file-upload": "^4.1.1"
+    "cypress-file-upload": "^4.1.1",
+    "cypress-multi-reporters": "^1.4.0",
+    "mocha-junit-reporter": "^2.0.0"
   },
   "cypress-cucumber-preprocessor": {
     "step_definitions": "cypress/support/steps"
